setup[styling]: add styling and a white background for body

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>gruppjo Audio Visual</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <!-- 1) Simple HTML UI elements to get us started -->
